--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "watch": "nodemon index.js",
+    "start": "node server.js",
+    "watch": "nodemon server.js",
     "seed": "node seeders/seed.js"
   },
   "author": "",
@@ -14,6 +14,6 @@
   "dependencies": {
     "express": "^4.16.3",
     "mongoose": "^5.3.16",
-    "morgan": "^1.10.0"
+    "morgan": "^1.9.1"
   }
 }
